WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
136574
[Curl] Compile error.
https://bugs.webkit.org/show_bug.cgi?id=136574
Summary
[Curl] Compile error.
peavo
Reported
2014-09-05 06:18:46 PDT
The ResourceResponse::setSuggestedFilename method is no longer available.
Attachments
Patch
(5.27 KB, patch)
2014-09-05 06:24 PDT
,
peavo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
peavo
Comment 1
2014-09-05 06:24:51 PDT
Created
attachment 237686
[details]
Patch
Alex Christensen
Comment 2
2014-09-05 12:12:10 PDT
Comment on
attachment 237686
[details]
Patch This seems to be similar to what was done in
https://bugs.webkit.org/show_bug.cgi?id=136534
WebKit Commit Bot
Comment 3
2014-09-05 13:05:31 PDT
Comment on
attachment 237686
[details]
Patch Clearing flags on attachment: 237686 Committed
r173329
: <
http://trac.webkit.org/changeset/173329
>
WebKit Commit Bot
Comment 4
2014-09-05 13:05:34 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug